--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-to-print": "^3.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
