--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@dcorp/react-to-print": "^2.15.1",
     "@paddle/paddle-js": "^1.4.1",
     "@paddle/paddle-node-sdk": "^2.7.0",
     "@radix-ui/react-accordion": "^1.2.8",
@@ -57,7 +58,6 @@
     "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
-    "react-to-print": "^3.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
